# magtogoek

./: LICENSE  MANIFEST.in  README.md  TODO.org  config_user_guide.md  note.org  pyproject.toml  requirements.txt  setup.py
Magtogoek/: config_parser.py  toolbox.py
Magtogoek/adcp/: reader.py
docs/: .#index.rst  Makefile  conf.py  genindex.html  index.html  index.rst  magtogoek.adcp.html  magtogoek.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
html/: index.html  magtogoek.html  py-modindex.html
magtogoek/: __init__.py  app.py  app_options.py  attributes_formatter.py  config_handler.py  config_parser.py  configfile.py  exceptions.py  logger.py  magtogoek_config.py  modification.org  navigation.py  odf_exporter_common.py  odf_format.py  platforms.py  plot_utils.py  process_common.py  process_configurations.py  quality_control.py  quality_control_common.py  quality_control_interactive.py  sci_tools.py  static_attributes.py  taskconfig.py  taskparser.py  toolbox.py  tools.py  utils.py
rti_python/: ChangeLog.txt  README.md
test/: adcp_correction_test.py  adcp_odf_test.py  adcp_process_test.py  configfile_test.py  odf_adcp_test.py  odf_format_test.py  process_config_test.py  process_pconfig_test.py  test_platforms.py  test_process_adcp.py  viking_tools_test.py
tests/: adcp_correction_test.py  adcp_odf_test.py  adcp_process_test.py  app_test.py  configfile_test.py  global_attributes_test.py  load_configfile_test.py  odf_format_test.py  platform_test.py  process_config_test.py  sci_tools_test.py  wps_tools_test.py
(+343 files in other folders)
