[tool.poetry]
name = "iml_adcp_processing"
version = "0.1.0"
description = "Module to process ADCP data from Viking Mooring"
authors = ["Jérôme J. Guay"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
